[Bug Fix]Prevent objects from overflowing beyond the screen

--- a/src/components/Outter/HamburgerMenu.css
+++ b/src/components/Outter/HamburgerMenu.css
@@ -1,14 +1,16 @@
-.header-inner{
-    padding:0 15%;
-    background-color: black;
-    justify-content: space-between;
-    margin:0px;
-    color:white;
-    padding-bottom: 5px;
-    margin:0 auto;
+.header-inner {
+  padding: 0 7%;
+  background-color: black;
+  justify-content: space-between;
+  margin: 0px;
+  color: white;
+  padding-bottom: 5px;
+  margin: 0 auto;
 }
-.logo_outter{
-    color: black;
-    flex-wrap: nowrap;
-    display: flex;
+.logo_outter {
+  color: black;
+  display: inline-block;
+}
+.logo_innter {
+  padding: 5% 0px;
 }
