--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -16,6 +16,6 @@
   background-color: gray;
   text-align: center;
   width: 100%;
-  padding: 10px;
+  padding: 10px 0px;
   font-weight: 800;
 }
